Real django app

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,17 @@
 [tox]
-envlist = py26, py27, py33
+envlist = py27, py33, docs, flake8
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/stressboard
-commands = python setup.py test
-deps =
-    -r{toxinidir}/requirements.txt
+commands =
+    pip install -r requirements-test.txt
+    ./manage.py test --failfast
+
+[testenv:flake8]
+commands = flake8 loadzilla --ignore='E122,E124,E125,E126,E128,E501,F403'
+
+[testenv:docs]
+changedir=docs
+deps=sphinx
+commands=
+    pip install -r ../requirements-test.txt
+    sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
