--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,7 +1,4 @@
-django>=1.5.1
+# django==1.6
+https://www.djangoproject.com/download/1.6b3/tarball/
 coverage
 mock>=1.0.1
-nose>=1.3.0
-django-nose>=1.2
-
-# Additional test requirements go here
