--- a/tox.ini
+++ b/tox.ini
@@ -7,11 +7,12 @@ commands =
     ./manage.py test --failfast
 
 [testenv:flake8]
-commands = flake8 loadzilla --ignore='E122,E124,E125,E126,E128,E501,F403'
+deps = flake8
+commands = flake8 stressboard --ignore='E122,E124,E125,E126,E128,E501,F403'
 
 [testenv:docs]
 changedir=docs
 deps=sphinx
 commands=
     pip install -r ../requirements-test.txt
-    sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
+    sphinx-build -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
