--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-# Config file for automatic testing at travis-ci.org
-
 language: python
 
 python:
@@ -7,8 +5,13 @@ python:
   - "2.7"
   - "2.6"
 
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements-test.txt
+install:
+ - pip install -r requirements-test.txt
+ - pip install coverage
 
-# command to run tests, e.g. python setup.py test
-script: python manage.py test
+script: coverage run manage.py test
+
+after_success:
+  - coverage report
+  - pip install --quiet python-coveralls
+  - coveralls
